[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Fonts/Font.tres" type="DynamicFont" id=1]
[ext_resource path="res://Menu/StageSelect/mug_current.png" type="Texture" id=2]
[ext_resource path="res://Menu/StageSelect/mug_paper.png" type="Texture" id=3]
[ext_resource path="res://Assets/boss_frame1.png" type="Texture" id=4]
[ext_resource path="res://Menu/bg_beam.png" type="Texture" id=5]
[ext_resource path="res://Menu/MenuChoice.gd" type="Script" id=6]
[ext_resource path="res://GUI/FadeScreen/FadeScreen.tscn" type="PackedScene" id=7]

[node name="MenuChoice" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )

[node name="FadeScreen" parent="." instance=ExtResource( 7 )]

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="Beam" type="TextureRect" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -32.0
margin_bottom = 32.0
texture = ExtResource( 5 )
expand = true
stretch_mode = 1

[node name="Header" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.2
anchor_right = 0.5
anchor_bottom = 0.2
margin_left = -92.0
margin_right = 92.0
margin_bottom = 9.0
custom_fonts/font = ExtResource( 1 )
text = "WHO IS THE NEXT TARGET?"
align = 1

[node name="Choices" type="HBoxContainer" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -36.5
margin_bottom = 36.5
grow_horizontal = 2
grow_vertical = 2
custom_constants/separation = 64
alignment = 1

[node name="Choice1" type="VBoxContainer" parent="Choices"]
margin_left = 44.0
margin_right = 100.0
margin_bottom = 73.0

[node name="Frame" type="MarginContainer" parent="Choices/Choice1"]
margin_left = 4.0
margin_right = 52.0
margin_bottom = 48.0
size_flags_horizontal = 4

[node name="Frame" type="TextureRect" parent="Choices/Choice1/Frame"]
margin_right = 48.0
margin_bottom = 48.0
texture = ExtResource( 4 )

[node name="Select" type="ColorRect" parent="Choices/Choice1/Frame"]
visible = false
margin_right = 48.0
margin_bottom = 48.0
color = Color( 1, 1, 1, 0.627451 )

[node name="Image" type="TextureRect" parent="Choices/Choice1/Frame"]
margin_left = 8.0
margin_top = 8.0
margin_right = 40.0
margin_bottom = 40.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource( 2 )

[node name="Caption" type="Label" parent="Choices/Choice1"]
margin_top = 52.0
margin_right = 56.0
margin_bottom = 73.0
custom_fonts/font = ExtResource( 1 )
text = "CURRENT
MAN"
align = 1

[node name="Choice2" type="VBoxContainer" parent="Choices"]
margin_left = 164.0
margin_right = 212.0
margin_bottom = 73.0

[node name="Frame" type="MarginContainer" parent="Choices/Choice2"]
margin_right = 48.0
margin_bottom = 48.0
size_flags_horizontal = 4

[node name="Frame" type="TextureRect" parent="Choices/Choice2/Frame"]
margin_right = 48.0
margin_bottom = 48.0
texture = ExtResource( 4 )

[node name="Select" type="ColorRect" parent="Choices/Choice2/Frame"]
visible = false
margin_right = 48.0
margin_bottom = 48.0
color = Color( 1, 1, 1, 0.627451 )

[node name="Image" type="TextureRect" parent="Choices/Choice2/Frame"]
margin_left = 8.0
margin_top = 8.0
margin_right = 40.0
margin_bottom = 40.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource( 3 )

[node name="Caption" type="Label" parent="Choices/Choice2"]
margin_top = 52.0
margin_right = 48.0
margin_bottom = 73.0
custom_fonts/font = ExtResource( 1 )
text = "PAPER
MAN"
align = 1
